profile: Fixed markdown bio images from overflowing.

--- a/srht/scss/base.scss
+++ b/srht/scss/base.scss
@@ -322,6 +322,7 @@ code {
 
     img {
       margin: 0 .2rem;
+      max-width: 100%;
     }
   }
 }
